Write some passed text

--- a/index.html
+++ b/index.html
@@ -10,9 +10,18 @@
 </head>
 
 <body>
-  <canvas id="paintingArea">
+  <canvas id="paintingArea"></canvas>
+  <textarea id="paintedText" placeholder="What should I write?">
+Error dolorem corporis eaque enim sequi molestiae. Fuga quas dolore eum delectus eum. Consequatur sed vitae totam similique officia. Id ut ratione rerum quia. Aliquid minima et nihil et non.
 
-  </canvas>
+Blanditiis omnis rerum ratione. Quasi porro sed ipsa nisi provident cupiditate. Sequi quia esse aliquid.
+
+In est deleniti sunt fugit velit. Qui et sunt exercitationem nihil eius praesentium. Ut pariatur ut deleniti enim rerum cumque. Consequuntur iste aut error commodi autem recusandae possimus doloribus.
+
+Fugit inventore ut veniam ut soluta pariatur vel suscipit. Qui mollitia soluta dolores. Sunt eligendi aut debitis commodi optio nisi qui. Beatae eligendi maiores sed quia ad.
+
+Quae quibusdam qui quis architecto enim odit autem. Animi facilis et nam ea. Qui possimus sit qui assumenda sit et illum assumenda. Aut a voluptas sed quia dolores aut repellendus dolorem.
+</textarea>
 </body>
 
 </html>
