--- a/index.html
+++ b/index.html
@@ -10,6 +10,12 @@
 </head>
 
 <body>
+  <form>
+   <input type="checkbox" checked id="drawLines">Lines<br>
+   <input type="checkbox" checked id="drawLineNumbers">Numbers<br>
+   <input type="checkbox" checked id="drawText">Text<br>
+   <input type="color" id="textColor">Text color<br>
+  </form>
   <canvas id="paintingArea"></canvas>
   <textarea id="paintedText" placeholder="What should I write?">
 Error dolorem corporis eaque enim sequi molestiae. Fuga quas dolore eum delectus eum. Consequatur sed vitae totam similique officia. Id ut ratione rerum quia. Aliquid minima et nihil et non.
