Add more options

--- a/index.html
+++ b/index.html
@@ -15,6 +15,8 @@
    <input type="checkbox" checked id="drawLineNumbers">Numbers<br>
    <input type="checkbox" checked id="drawText">Text<br>
    <input type="color" id="textColor">Text color<br>
+   <input type="number" style="width: 5em;" id="fontSize" value="30">Font size<br>
+   <input type="text" style="width: 5em;" id="font" value="sans-serif">Font<br>
   </form>
   <canvas id="paintingArea"></canvas>
   <textarea id="paintedText" placeholder="What should I write?">
